ingress-service.yaml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: karbon-k8sodoodev-1ef955-k8s-worker-0
      http:
       paths:
         - path: /
           backend:
             serviceName: web-service
             servicePort: 8069
         #- path: /api/?(.*) 
          # backend:
             # serviceName: server-cluster-ip-service
              #servicePort: 5000
